# Chronos-ECHO

./: .gitignore  README.md  pyproject.toml
TimeMMD/: README.md  __init__.py  aurora_reference.py  dataset.py  manifest.csv  run_benchmark.py  validate_dataset.py
notebooks/: timemmd_colab_benchmark.ipynb
scripts/: evaluate_timemmd.py
scripts/timemmd/: README.md  run_benchmark.py
src/chronos_echo/: __init__.py  config.py  echo.py  echo_pipeline.py  multimodal_dataset.py  timemmd.py
test/: test_chronos2_echo.py  test_echo_pipeline_loading.py  test_timemmd_benchmark.py  test_timemmd_colab_notebook.py  test_timemmd_gpu_smoke.py
