[project]
name = "chronos2-echo"
dynamic = ["version"]
authors = [
  { name = "Vincent Wang", email = "wzh20070720@gmail.com" },
]
maintainers = [
  { name = "Vincent Wang", email = "wzh20070720@gmail.com" },
]
description = "Chronos-2-ECHO: Event-guided Calibration with Heterogeneous Observations for Chronos-2"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = ["chronos-forecasting>=2.2.2,<3"]
keywords = [
  "time-series-forecasting",
  "multimodal-learning",
  "financial-forecasting",
  "chronos-2",
  "aurora",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chronos_echo"]

[tool.hatch.version]
path = "src/chronos_echo/__about__.py"

[project.optional-dependencies]
test = ["pytest~=8.0", "peft>=0.13.0,<1", "pandas[pyarrow]>=2.0,<2.4"]
typecheck = ["mypy~=1.9"]
dev = [
  "pytest~=8.0",
  "peft>=0.13.0,<1",
  "pandas[pyarrow]>=2.0,<2.4",
  "tensorboard",
]
timemmd = [
  "pandas[pyarrow]>=2.0",
  "peft>=0.13.0,<1",
  "accelerate>=0.30",
  "safetensors>=0.4",
]

[project.urls]
Upstream-Chronos = "https://github.com/amazon-science/chronos-forecasting"
Chronos-2-Paper = "https://arxiv.org/abs/2510.15821"

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 119
lint.ignore = [
  "E501", # Line too long
  "E731", # Do not assign a `lambda` expression, use a `def`
  "E722", # Do not use bare `except`
]
